--- a/src/Phase 1/Jamaat/Master/title.html
+++ b/src/Phase 1/Jamaat/Master/title.html
@@ -4,12 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../../output.css">
+        <title>Title Master</title>
     </head>
     <body>
         <div class="container flex items-center justify-center min-h-screen">
             <form action
                 class="w-[90%] md:max-w-md shadow-lg rounded-md px-4 py-6"
                 data-theme="light">
+                <div class="text-xl text-center capitalize mb-4 underline">title
+                    master</div>
                 <div class="input-container flex flex-col lg:flex-row gap-2">
                     <label for="code"
                         class="form-control w-full capitalize lg:w-1/3">
