--- a/src/Phase 1/Jamaat/Master/mohalla.html
+++ b/src/Phase 1/Jamaat/Master/mohalla.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../../output.css">
-        <title>Title Master</title>
+        <title>Mohalla Master</title>
     </head>
-
     <body>
         <div class="container flex items-center justify-center min-h-screen">
             <form action
                 class="w-[90%] md:max-w-md shadow-lg rounded-md px-4 py-6 flex flex-col items-center justify-between gap-2"
                 data-theme="light">
                 <div
-                    class="text-xl text-center capitalize mb-4 underline w-full">title
+                    class="text-xl text-center capitalize mb-4 underline w-full">mohalla
                     master</div>
                 <div
                     class="input-container flex flex-col lg:flex-row lg:gap-2 w-full">
-                    <label for="title-code"
+                    <label for="mohalla-code"
                         class="form-control w-full capitalize lg:w-1/3">
                         <div class="label">
                             <span class="label-text">code</span>
                         </div>
-                        <input type="text" name="title-code" id="title-code"
+                        <input type="text" name="mohalla-code" id="mohalla-code"
                             class="input input-bordered input-sm w-full"
                             required>
                     </label>
-                    <label for="title-name"
+                    <label for="mohalla-name"
                         class="form-control w-full lg:w-2/3 capitalize">
                         <div class="label">
                             <span class="label-text">name</span>
                         </div>
-                        <input type="text" name="title-name" id="title-name"
+                        <input type="text" name="mohalla-name" id="mohalla-name"
                             class="input input-bordered input-sm w-full"
                             required>
                     </label>
@@ -42,13 +40,13 @@
                         <thead>
                             <tr>
                                 <th class="capitalize">sr. no.</th>
-                                <th class="capitalize">title</th>
+                                <th class="capitalize">mohalla</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>1.</td>
-                                <td class="capitalize">Mulla</td>
+                                <td class="capitalize">fakhri mohalla</td>
                             </tr>
                         </tbody>
                     </table>
@@ -65,5 +63,4 @@
             </form>
         </div>
     </body>
-
 </html>
