--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">mohalla</a>
                                                                         </li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/sector.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">sector</a>
                                                                         </li>
                                                                         <li><a
