finished phase 1 jamaat module's master sub-module's till nation master

--- a/src/index.html
+++ b/src/index.html
@@ -78,27 +78,27 @@
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">sector</a>
                                                                         </li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/business.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">business
                                                                                         type</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/relation.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">relation</a>
                                                                         </li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/sabeel-grade.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">sabeel
                                                                                         grade</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/ziyarat.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">ziyarat</a>
                                                                         </li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/idara.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">idara
                                                                                         master</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/nation.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-slate-700 hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">nation</a>
                                                                         </li>
                                                                         <li><a
