--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         </head>
         <body>
                 <header
-                        class="w-full bg-slate-700 shadow-lg sticky top-0 left-0">
+                        class="w-full bg-[#02393e] shadow-lg sticky top-0 left-0">
                         <nav class="w-full mx-auto">
 
                                 <!-- nav-header -->
