changed btn themes

--- a/src/Phase 1/Jamaat/Master/business.html
+++ b/src/Phase 1/Jamaat/Master/business.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="form-control w-full mt-2">
                     <button
-                        class="btn text-slate-200 bg-slate-600 capitalize">submit</button>
+                        class="btn btn-theme-primary capitalize">submit</button>
                 </div>
                 <div class="form-control w-full mt-4 text-center">
                     <a href="../../../index.html" class="link">back to
