necessary theme changes

--- a/src/Phase 1/Jamaat/Master/idara.html
+++ b/src/Phase 1/Jamaat/Master/idara.html
@@ -43,12 +43,20 @@
                             <tr>
                                 <th class="capitalize">sr. no.</th>
                                 <th class="capitalize">idara</th>
+                                <th class="capitalize">actions</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>1.</td>
                                 <td class="capitalize">FMB</td>
+                                <td class="capitalize">
+                                    <div class="flex gap-2">
+                                        <button
+                                            class="btn btn-xs capitalize text-white btn-info">edit</button><button
+                                            class="btn btn-xs capitalize text-white btn-error">delete</button>
+                                    </div>
+                                </td>
                             </tr>
 
                         </tbody>
@@ -56,7 +64,7 @@
                 </div>
                 <div class="form-control w-full mt-2">
                     <button
-                        class="btn text-slate-200 bg-slate-600 capitalize">submit</button>
+                        class="btn btn-theme-primary capitalize">submit</button>
                 </div>
                 <div class="form-control w-full mt-4 text-center">
                     <a href="../../../index.html" class="link">back to
