--- a/src/Phase 1/Jamaat/Master/nation.html
+++ b/src/Phase 1/Jamaat/Master/nation.html
@@ -68,6 +68,7 @@
                                 <th class="capitalize">rate</th>
                                 <th class="capitalize">mobile prefix</th>
                                 <th class="capitalize">nation</th>
+                                <th class="capitalize">actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -76,6 +77,13 @@
                                 <td class="capitalize">1 USD - 83 INR</td>
                                 <td class="capitalize">+1</td>
                                 <td class="capitalize">United States</td>
+                                <td class="capitalize">
+                                    <div class="flex gap-2">
+                                        <button
+                                            class="btn btn-xs capitalize text-white btn-info">edit</button><button
+                                            class="btn btn-xs capitalize text-white btn-error">delete</button>
+                                    </div>
+                                </td>
                             </tr>
 
                         </tbody>
@@ -83,7 +91,7 @@
                 </div>
                 <div class="form-control w-full mt-2">
                     <button
-                        class="btn text-slate-200 bg-slate-600 capitalize">submit</button>
+                        class="btn btn-theme-primary capitalize">submit</button>
                 </div>
                 <div class="form-control w-full mt-4 text-center">
                     <a href="../../../index.html" class="link">back to
