updated the buttin theme and added Edit and Delete options

--- a/src/Phase 1/Jamaat/Master/relation.html
+++ b/src/Phase 1/Jamaat/Master/relation.html
@@ -43,27 +43,49 @@
                             <tr>
                                 <th class="capitalize">sr. no.</th>
                                 <th class="capitalize">relation</th>
+                                <th class="capitalize">actions</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>1.</td>
                                 <td class="capitalize">brother</td>
+                                <td class="capitalize">
+                                    <div class="flex gap-2">
+                                        <button
+                                            class="btn btn-xs capitalize text-white btn-info">edit</button><button
+                                            class="btn btn-xs capitalize text-white btn-error">delete</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>2.</td>
                                 <td class="capitalize">daughter</td>
+                                <td class="capitalize">
+                                    <div class="flex gap-2">
+                                        <button
+                                            class="btn btn-xs capitalize text-white btn-info">edit</button><button
+                                            class="btn btn-xs capitalize text-white btn-error">delete</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>3.</td>
                                 <td class="capitalize">father</td>
+                                <td class="capitalize">
+                                    <div class="flex gap-2">
+                                        <button
+                                            class="btn btn-xs capitalize text-white btn-info">edit</button><button
+                                            class="btn btn-xs capitalize text-white btn-error">delete</button>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="form-control w-full mt-2">
                     <button
-                        class="btn text-slate-200 bg-slate-600 capitalize">submit</button>
+                    class="btn btn-theme-primary capitalize"">submit</button>
                 </div>
                 <div class="form-control w-full mt-4 text-center">
                     <a href="../../../index.html" class="link">back to
