--- a/src/Phase 1/Jamaat/Master/sector.html
+++ b/src/Phase 1/Jamaat/Master/sector.html
@@ -58,6 +58,7 @@
                                 <th class="capitalize">sr. no.</th>
                                 <th class="capitalize">mohalla</th>
                                 <th class="capitalize">sector</th>
+                                <th class="capitalize">action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -65,13 +66,20 @@
                                 <td>1.</td>
                                 <td class="capitalize">fakhri mohalla</td>
                                 <td class="capitalize">sector a</td>
+                                <td class="capitalize">
+                                    <div class="flex gap-2">
+                                        <button
+                                            class="btn btn-xs capitalize text-white btn-info">edit</button><button
+                                            class="btn btn-xs capitalize text-white btn-error">delete</button>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="form-control w-full mt-2">
                     <button
-                        class="btn text-slate-200 bg-slate-600 capitalize">submit</button>
+                        class="btn btn-theme-primary capitalize">submit</button>
                 </div>
                 <div class="form-control w-full mt-4 text-center">
                     <a href="../../../index.html" class="link">back to
