--- a/src/index.html
+++ b/src/index.html
@@ -102,13 +102,13 @@
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">nation</a>
                                                                         </li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/RTPF.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">reason
                                                                                         for
                                                                                         print
                                                                                         form</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/yearly-takhmeem.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">yearly
                                                                                         takhmeen</a></li>
                                                                         <li><a
