--- a/src/index.html
+++ b/src/index.html
@@ -112,15 +112,15 @@
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">yearly
                                                                                         takhmeen</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/other-takhmeen.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">other
                                                                                         takhmeen</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/deduction-reason.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">deduction
                                                                                         reason</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/amanat-takhmeem.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">amanat
                                                                                         takhmeen</a></li>
                                                                         <li><a
