completed jamaat khana  master in jamaat module master sub module

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">amanat
                                                                                         takhmeen</a></li>
                                                                         <li><a
-                                                                                        href="#"
+                                                                                        href="./Phase 1/Jamaat/Master/jamaat-khana.html"
                                                                                         class="jamaat-master-dropdown-links text-slate-200 capitalize bg-[#02393E] hover:bg-slate-800 block transition-all py-2 pl-12 pr-4">jamaat
                                                                                         khana
                                                                                         master</a></li>
